@@ -1,17 +1,15 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.model.builder.xml.dom.chains.processing;
 
+import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.config.model.deploy.DeployState;
 import com.yahoo.config.model.producer.AbstractConfigProducer;
-import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.vespa.model.builder.xml.dom.chains.ComponentsBuilder;
 import com.yahoo.vespa.model.builder.xml.dom.chains.DomChainsBuilder;
 import com.yahoo.vespa.model.container.processing.ProcessingChain;
 import com.yahoo.vespa.model.container.processing.ProcessingChains;
 import com.yahoo.vespa.model.container.processing.Processor;
 import org.w3c.dom.Element;
-
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -19,22 +17,21 @@ import java.util.Map;
  * Root builder of the processing model
  *
  * @author  bratseth
- * @since   5.1.6
  */
 public class DomProcessingBuilder extends DomChainsBuilder<Processor, ProcessingChain, ProcessingChains> {
 
     public DomProcessingBuilder(Element outerChainsElem) {
-        super(outerChainsElem, Arrays.asList(ComponentsBuilder.ComponentType.processor), ApplicationPackage.PROCESSORCHAINS_DIR);
+        super(outerChainsElem, List.of(ComponentsBuilder.ComponentType.processor), ApplicationPackage.PROCESSORCHAINS_DIR);
     }
 
     @Override
-    protected ProcessingChains newChainsInstance(AbstractConfigProducer parent) {
+    protected ProcessingChains newChainsInstance(AbstractConfigProducer<?> parent) {
         return new ProcessingChains(parent, "processing");
     }
 
     @Override
-    protected ProcessingChainsBuilder readChains(DeployState deployState, AbstractConfigProducer ancestor, List<Element> processingChainsElements,
-                                                 Map<String, ComponentsBuilder.ComponentType> outerComponentTypeByComponentName) {
+    protected ProcessingChainsBuilder readChains(DeployState deployState, AbstractConfigProducer<?> ancestor, List<Element> processingChainsElements,
+                                                 Map<String, ComponentsBuilder.ComponentType<?>> outerComponentTypeByComponentName) {
         return new ProcessingChainsBuilder(deployState, ancestor, processingChainsElements, outerComponentTypeByComponentName);
     }
 
